changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: don't hardcode pre and post conditions files.
Nicolas Weeger 2010-05-30

CRE: add 'npctoken' and 'setnpctoken' pre and post conditions.
Nicolas Weeger 2010-05-30

Add DM 'purge_quest_state' command to make it easy to fix quest state
through manual file editing without restarting server.
Nicolas Weeger 2010-05-30

CRE: enable message rule reordering.
Nicolas Weeger 2010-05-30

CRE: expand resource tree if only one item.
Nicolas Weeger 2010-05-29

CRE: enable new message file creation.
Nicolas Weeger 2010-05-29

CRE: enable message rule addition or removal.
Nicolas Weeger 2010-05-29

Fix CRE crash when not enough reply data.
Nicolas Weeger 2010-05-29

Disable cf_darcap's plugin handleDeath function, replaced by a Python script.
Nicolas Weeger 2010-05-29

Expose 'Map.InsertAround' to Python.
Nicolas Weeger 2010-05-29

Remove unused "oldmessage" parameter from draw_ext_info, draw_ext_info_format,
  ext_info_map, ext_info_map_except, and ext_info_map_except2 functions and
  calls.
Kevin Bulgrien 2010-05-28

Fix socket/info.c::draw_ext_message() comments to be more informative and to
  update them to more completely describe current behavior.
Remove the socket/info.c::draw_ext_message() socket/info.c::print_message()
  call to fix bug 2984255 and to remove inappropriate log file clutter.
Remove socket/info.c::print_message() as LOG() is the proper method of logging
  messages.  It is obvious that the function has been modified from its
  original implementation as it expects a player pointer but does not use it.