@@ -6,6 +6,7 @@ victimtype=  player|object|any|byname
 victim= who|activator|who_owner|activator_owner|object's name
 unique= yes|no
 always_delete= yes|no
+delete_event_end= yes to have the event be removed when the animation end, no else
 parallel= yes|no
 paralyzed= yes|no
 time_representation= second|tick
