@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+New variable to cf_anim. Enable object state querying (using 'fix')
+to know if an object is animated.
+Nicolas Weeger 2010-05-30
+
 CRE: don't hardcode pre and post conditions files.
 Nicolas Weeger 2010-05-30
 
